Fri Aug 12 08:17:46 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): use SOMAXCONN for
	  listen backlog.

	* ext/socket/unixsocket.c (rsock_init_unixsock): ditto.

	* ext/socket/lib/socket.rb (Addrinfo#listen): ditto.
	  (Socket.tcp_server_sockets_port0): ditto.

	* ext/socket/mkconstants.rb: define SOMAXCONN as 5 if not available.

	[ruby-core:38493]

Fri Aug 12 03:24:35 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Import RDoc 3.9.2.  Fixes TIDYLINK for HTML output.

Thu Aug 11 15:37:42 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* variable.c (autoload_delete): An autoload entry is still in a
	  RCLASS_IV_TBL, not in a RCLASS_CONST_TBL, so take back the table
	  changed in r29600. And an autoload entry keeps not a
	  rb_const_entry_t but a NODE so remove rb_const_entry_t thing added
	  in r29602.

Thu Aug 11 15:07:36 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command): use LIBRUBYARG in rbconfig for
	  unbundled extensions.  [ruby-core:38802] [Bug #5147]

	* lib/mkmf.rb (init_mkmf): revert r32902.  [ruby-core:38903]

Wed Aug 10 23:03:55 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb: fix argument check in the previous commit.

Wed Aug 10 22:12:28 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/lib/socket.rb (Socket.tcp): add :connect_timeout option.
	  (Addrinfo#connect_from): add :timeout option.
	  (Addrinfo#connect): ditto.
	  (Addrinfo#connect_to): ditto.
	  [ruby-core:38538]

Wed Aug 10 21:27:19 2011  Tanaka Akira  <akr@fsij.org>

	* lib/net/pop.rb: fix typo in document.

	* lib/net/http.rb: ditto.

	* lib/net/imap.rb: ditto.

Wed Aug 10 19:30:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* complex.c (nucomp_rationalize): calls rationalize of real part if
	  imaginary part is exactly zero.  The patch is made by Marc-Andre
	  Lafortune.  fixes [Bug #5178] [ruby-core:38885]

	* test/ruby/test_complex.rb (test_rationalize): add a test for the
	  above change.
